# polkameter

./: .gitignore  README.md  book.toml  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docs.yml  release.yml  secrets.yml
docs/: README.md  SUMMARY.md  contributing.md  first-run.md  getting-started.md  install.md  xml-format-v1.md
docs/operations/: README.md  ci.md  local-chain.md  releases.md  troubleshooting.md
docs/reference/: README.md  agent-protocol.md  cli-contract.md  glossary.md  scenario-schema.md
docs/theme/: polkameter.css
docs/using/: README.md  artifacts.md  cli.md  desktop.md  execution.md  jmeter.md  remote-agent.md  scenarios.md  signers.md
schemas/: polkameter-plan-v1.xsd
src/: live-results.test.ts  live-results.ts  main.ts  run-state.test.ts  run-state.ts  scenario-plan.test.ts  scenario-plan.ts  styles.css  svg-data.test.ts  svg-data.ts  tour.ts  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: application.rs  artifacts.rs  cli.rs  cli_main.rs  jmx.rs  lib.rs  main.rs  preflight.rs  remote.rs  report.rs  runner.rs  scenario.rs  scheduler.rs  subxt_adapter.rs  telemetry.rs  xml_scenario.rs
src-tauri/tests/fixtures/: valid-scenario.polkameter.json  valid-scenario.polkameter.xml
src-tauri/tests/fixtures/report/: command.txt  events.jsonl  resolved-plan.json  samples.jtl  scenario.polkameter.json  summary.md  telemetry.jsonl
tests/zombienet/: cli-smoke.polkameter.json  cli-smoke.sh  install-binaries.sh  polkameter-relay.toml
