[package]
name = "polkameter"
version = "0.1.0"
description = "A JMeter-inspired Polkadot SDK stress testing workbench"
edition = "2021"
rust-version = "1.93"
license = "GPL-3.0-or-later"

[lib]
name = "polkameter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
anyhow = "1"
csv = "1"
futures = "0.3"
hex = "0.4"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subxt = { version = "0.44.3", default-features = false, features = ["jsonrpsee", "native"] }
subxt-signer = { version = "0.44.3", features = ["sr25519", "subxt"] }
tauri = { version = "2.11.5", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }

[workspace]
