[package]
name = "polkameter"
version = "0.1.0"
description = "A JMeter-inspired Polkadot SDK stress testing workbench"
edition = "2021"
rust-version = "1.93"
license = "Apache-2.0"

[lib]
name = "polkameter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
anyhow = "1"
axum = "0.8"
csv = "1"
futures = "0.3"
hex = "0.4"
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
quick-xml = "0.41"
rand = "0.8"
rand_distr = "0.6"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subxt = { version = "0.50.2", default-features = false, features = ["jsonrpsee", "native"] }
subxt-signer = { version = "0.50.2", features = ["sr25519", "subxt"] }
tauri = { version = "2.11.5", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }

[workspace]
